Dockerize, make it compatible with CI